<resources>
    <string name="app_name">FormViewModelUseKotlin</string>
    <string name="title">Registration Form</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="phone_number">Télefono</string>
    <string name="dni">Cédula</string>
    <string name="age">Edad</string>
    <string name="submit">Enviar</string>
    <string name="resume">RESUMEN</string>
</resources>